# opencode-proxy

./: .gitignore  LICENSE  README.md  noxfile.py  opencode-proxy.sh  opp.example.toml  opp.toml  pyproject.toml  setup.py
opencode_proxy/: app.py  config.py  opencode_config.py
tests/: test_app.py  test_opencode_config.py
